Fixed inputs on Firefox.

--- a/client/index.css
+++ b/client/index.css
@@ -93,6 +93,10 @@ textarea {
   white-space: pre;
 }
 
+[contenteditable] {
+  min-height: 1.75em;
+}
+
 .app {
   height: 100vh;
   width: 100vw;
